# fcrypt

./: Cargo.toml  rustfmt.toml
src/: main.rs
src/crypto/: mod.rs  read.rs  write.rs
