[package]
name = "fcrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6", features = ["std"] }
argon2 = "0.4.0"
blake3 = "1.3.1"
chacha20 = { version = "0.9.0", features = ["zeroize"] }
hkdf = "0.12.3"
rpassword = "6.0.1"
clap = { version = "3.1.8", features = ["cargo", "derive"] }
sha2 = "0.10.2"
hmac = "0.12.1"
bincode = "2.0.0-rc.1"
indicatif = "0.17.0-rc.10"
zeroize = { version = "1.5.5", features = ["zeroize_derive"] }